feat: Implement Selenium Grid and improve E2E automation
- Add Selenium Grid setup with Chrome and Firefox nodes
- Implement Page Object Model refactoring for login tests
- Add Allure reporting with automatic result processing
- Create test execution script with delay for Allure processing
- Add comprehensive .gitignore files for all services
- Fix backend password hashing (bcrypt -> pbkdf2_sha256)
- Update frontend API endpoint for Docker network
- Add pytest configuration and markers
- Remove unused locators and clean up code structure
- Add Docker Compose profiles for testing

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Авторизация</title>
   <link href="style.css?v=2" rel="stylesheet" type="text/css" />
-  <meta name="api-base" content="http://localhost:5000">
+  <meta name="api-base" content="http://backend:5000">
 </head>
+
 <body>
   <div class="container" style="max-width:520px;">
     <header class="header" style="padding:30px 24px;text-align:left;">
@@ -67,6 +69,5 @@
     });
   </script>
 </body>
+
 </html>
-
-
