feat: унификация дизайна всех разделов и улучшение UI
- Унифицированы стили всех разделов (Social Network, Task Management, Content Management, Analytics)
- Убраны inline onclick, заменены на data-action атрибуты
- Добавлены градиентные границы и hover эффекты для всех карточек
- Исправлен размер кнопки смены темы (32x32px как у аватара)
- Добавлен отступ между кнопкой темы и меню пользователя
- Улучшена поддержка темной темы для всех элементов
- Исправлен аватар пользователя в секции создания постов
- Добавлены методы обработки действий для всех разделов
- Адаптивная верстка для всех разрешений экрана

--- a/frontend/index_new.html
+++ b/frontend/index_new.html
@@ -60,6 +60,12 @@
             </a>
         </div>
 
+        <div class="navbar-actions">
+            <button id="theme-toggle" class="theme-toggle-btn" aria-label="Переключить тему">
+                <span class="theme-icon">🌙</span>
+            </button>
+        </div>
+
         <div class="navbar-user" id="navbar-user">
             <div class="user-menu" id="user-menu">
                 <div class="user-avatar">
